--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag AZ-image:$(date +%s)
+        run: docker build . --file Dockerfile --tag az-image:$(date +%s)
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
