--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,11 @@ jobs:
         with:
           terraform_version: 1.5.7  # Adjust to your desired Terraform version
 
+      - name: Install Azure CLI
+        run: |
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+        if: runner.os == 'Linux' # Only for Linux runners
+
       - name: Azure Login
         uses: azure/login@v1
         with:
