--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,41 +1,53 @@
-name: Terraform Azure CICD
-
 on:
-  push:
-    branches:
-      - main  # Adjust the branch name as needed
+  release:
+    types: [published]
+    branches: [main]
+
+name: On Release Main
 
 jobs:
   terraform:
+    name: 'Terraform'
     runs-on: ubuntu-latest
+    env:
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      TF_VERSION: 1.3.9
+
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./terraform
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v1
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.5.7  # Adjust to your desired Terraform version
+          terraform_version: ${{ env.TF_VERSION }}
 
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-          
+      - name: Terraform fmt
+        id: fmt
+        run: terraform fmt -check
 
-      - name: Initialize Terraform
-        run: terraform init
+      - name: Terraform init
+        id: init
+        run: |
+          set -a 
+          source ../.env.backend
+          terraform init
 
-      - name: Validate Terraform
-        run: terraform validate
+      - name: Terraform validate
+        id: validate
+        run: terraform validate -no-color
 
-      - name: Plan Terraform Changes
-        run: terraform plan -out=tfplan
+      - name: Terraform plan
+        id: plan
+        run: terraform plan -no-color
 
       - name: Apply Terraform Changes
         run: terraform apply -auto-approve tfplan
-
-      # Optional: Uncomment the following steps if you want to destroy resources after the workflow.
-      # - name: Destroy Terraform Resources
-      #   run: terraform destroy -auto-approve
