--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
+      - name: Deploy state bucket
+        run: |
+          set -a 
+          az login --service-principal \
+            -u ${{ secrets.ARM_CLIENT_ID }} \
+            -p ${{ secrets.ARM_CLIENT_SECRET }} \
+            --tenant ${{ secrets.ARM_TENANT_ID }}
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
@@ -38,9 +44,7 @@ jobs:
         id: init
         run: |
           set -a 
-          source ../.env.backend
           terraform init
-
       - name: Terraform validate
         id: validate
         run: terraform validate -no-color
